[package]
name = "reasonflow"
version = "0.1.0"
edition = "2021"
description = "An AI workflow designer for rapid AI application development"
authors = ["Ling"]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["shell-open"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
async-trait = "0.1.77"
anyhow = "1.0.79"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]